# IMDgroup-pymatgen

./: .gitignore  README.md  README.org  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  acknowledgements.md  api.rst  cli.md  conf.py  getting_started.md  index.md  index.rst  python_api.md
docs/_templates/autosummary/: class.rst  module.rst
src/IMDgroup/: __init__.py  common.py
src/IMDgroup/pymatgen/: __init__.py
src/IMDgroup/pymatgen/cli/: __init__.py  imdg.py  imdg_analyze.py  imdg_create.py  imdg_derive.py  imdg_diff.py  imdg_status.py  imdg_visualize.py
src/IMDgroup/pymatgen/core/: __init__.py  structure.py
src/IMDgroup/pymatgen/diffusion/: __init__.py  neb.py
src/IMDgroup/pymatgen/io/: __init__.py  atat.py
src/IMDgroup/pymatgen/io/ase/: __init__.py  ase.py
src/IMDgroup/pymatgen/io/vasp/: IMDGraphite.yaml  IMDRelaxCellulose.yaml  __init__.py  cellulose_ialpha.cif  cellulose_ibeta.cif  functionals.yaml  inputs.py  outputs.py  sets.py  vaspdir.py
src/IMDgroup/pymatgen/transformations/: __init__.py  insert_molecule.py  insert_molecule_cli.py  symmetry_clone.py
src/IMDgroup/utils/: __init__.py  mpl.py
src/IMDgroup_pymatgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
